@@ -40,6 +40,7 @@ extern const char* karrows_GetSetMethod;
 extern const char* kautoVoicesColoration_GetSetMethod;
 extern const char* kblue_GetSetMethod;
 extern const char* kbrightness_GetSetMethod;
+extern const char* kbrowse_SetMethod;
 extern const char* kcancel_SetMethod;
 extern const char* kcliptime_GetSetMethod;
 extern const char* kclippitch_GetSetMethod;
@@ -113,6 +114,7 @@ extern const char* kmeasureBars_GetSetMethod;
 extern const char* kmouse_SetMethod;
 extern const char* kname_GetSetMethod;
 extern const char* knew_SetMethod;
+extern const char* kbrowse_SetMethod;
 extern const char* korder_GetSetMethod;
 extern const char* kosc_GetSetMethod;
 extern const char* kout_GetMethod;
